--- a/website2/views/chat.ejs
+++ b/website2/views/chat.ejs
@@ -4,108 +4,117 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="/stylesheets/main.css" rel="stylesheet">
-  <link href="/stylesheets/style.css" rel="stylesheet2">
-  <body class="h-80 flex flex-col bg-back">
-      <!--Navbar-->
-      <div class="navbar h-24 w-full flex flex-row justify-between items-center mt-0 bg-gradient-to-r from-maroon to-maroon-dark shadow-gray-600 shadow-lg">
-        <!--settings icon--> 
-        <a href="/settings">
-        <img
-          src="https://cdn.discordapp.com/attachments/1280355262976360490/1289829540318679102/setting.png?ex=66fa3ede&is=66f8ed5e&hm=a0431fc8d07f50a621d14c1732b0d3ef68f5d1553408c150ffb660fd6fa814f7&"
-          class="object-contain object-left flex ml-8 mr-20 h-12"
-        />
-        </a>
-
-        <!--logo-->
-        <a href="/home" class="object-contain h-full">
-        <img 
-          src="https://cdn.discordapp.com/attachments/1286925382632865804/1290021310797189271/Dormie_app_Gray.png?ex=66faf177&is=66f99ff7&hm=08162744a28d74d86402a2a69e227a5c38003eb9ad7a1f7f0834b4fb6b8c16aa&"
-          class="object-contain h-full"
-        />
-        </a>
-
-        <!--text and search icon-->
-        <div class="flex flex-row">
-          <a href="/search">
-          <img
-            src="https://cdn.discordapp.com/attachments/1280355262976360490/1290168712434941952/Magnifying_Glass.png?ex=66fb7abf&is=66fa293f&hm=bda1474115b60cad013937e3348c359704c6cec6dc9c67886fa31112daf135cd&"
-            class="object-contain object-right mr-8 h-12"
+  <link href="/stylesheets/style.css" rel="stylesheet">
+  <title>Responsive Chat Application</title>
+  <!-- Include Tailwind CSS CDN for demonstration purposes -->
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body class="flex flex-col min-h-screen bg-back">
+  
+  <!-- Navbar -->
+  <nav class="navbar h-16 md:h-24 w-full flex flex-row justify-between items-center bg-gradient-to-r from-maroon to-maroon-dark shadow-lg px-4 md:px-8">
+    <div class="flex items-center">
+      <!-- Settings Icon -->
+      <a href="/settings">
+      <img
+      src="https://cdn.discordapp.com/attachments/1280355262976360490/1289829540318679102/setting.png?ex=66fa3ede&is=66f8ed5e&hm=a0431fc8d07f50a621d14c1732b0d3ef68f5d1553408c150ffb660fd6fa814f7&"
+      class="object-contain object-left flex ml-8 mr-20 h-12"
+      />
+       </a>
+      <!--logo-->
+      <a href="/home" class="object-contain h-full">
+          <img 
+            src="https://cdn.discordapp.com/attachments/1286925382632865804/1290021310797189271/Dormie_app_Gray.png?ex=66faf177&is=66f99ff7&hm=08162744a28d74d86402a2a69e227a5c38003eb9ad7a1f7f0834b4fb6b8c16aa&"
+            class="object-contain h-full"
           />
+          </a>
+      <!--text and search icon-->
+      <div class="flex flex-row">
+      <a href="/search">
+      <img
+          src="https://cdn.discordapp.com/attachments/1280355262976360490/1290168712434941952/Magnifying_Glass.png?ex=66fb7abf&is=66fa293f&hm=bda1474115b60cad013937e3348c359704c6cec6dc9c67886fa31112daf135cd&"
+          class="object-contain object-right mr-8 h-12"
+      />
       </a>
-          <a href="/chats">
-          <img
-            src="https://cdn.discordapp.com/attachments/1280355262976360490/1289826503818739762/communication.png?ex=66fa3c0a&is=66f8ea8a&hm=59f51764c7018fe1385d996ebb89a88666dd0810ffbe04016f40385015f1fe0e&"
-            class="object-contain object-right mr-8 h-12" 
-          />
+      <a href="/chats">
+      <img
+          src="https://cdn.discordapp.com/attachments/1280355262976360490/1289826503818739762/communication.png?ex=66fa3c0a&is=66f8ea8a&hm=59f51764c7018fe1385d996ebb89a88666dd0810ffbe04016f40385015f1fe0e&"
+          class="object-contain object-right mr-8 h-12"
+        />
       </a>
-        </div>
-        
     </div>
+  </nav>
 
-  <div class="flex flex-col h-screen">
-
-    <!-- Message section -->
-    <div class="flex flex-grow overflow-hidden">
-        <div class="h-96 w-1/4 bg-white border-r overflow-y-scroll" id="chatSidebar">
-          <% contacts.forEach(function(contact) { %>
-            <div id="<%= contact.username %>Chat" class="p-4 border-b flex items-center cursor-pointer user-chat hover:bg-gray-100" data-chat-id="<%= contact.chatId %>" data-user-id="<%= contact.username %>" data-user-name="<%= contact.first_name %> <%= contact.last_name %>" data-user-avatar="<%= contact.avatar || 'images/defaultpfp.jpg' %>">
-              <img src="<%= contact.avatar || 'images/defaultpfp.jpg' %>" alt="<%= contact.first_name %> <%= contact.last_name %>" class="rounded-full w-10 h-10 mr-4">
-              <div>
-                <div class="font-semibold"><%= contact.first_name %> <%= contact.last_name %></div>
-                <div class="text-sm text-gray-600">Last message preview</div>
-              </div>
+  <!-- Main Content -->
+  <div class="flex flex-1 overflow-hidden">
+    
+    <!-- Sidebar -->
+    <aside id="sidebar" class="w-64 bg-white border-r overflow-y-auto hidden md:block">
+      <div class="p-4">
+        <% contacts.forEach(function(contact) { %>
+          <div id="<%= contact.username %>Chat" class="p-4 border-b flex items-center cursor-pointer user-chat hover:bg-gray-100" data-chat-id="<%= contact.chatId %>" data-user-id="<%= contact.username %>" data-user-name="<%= contact.first_name %> <%= contact.last_name %>" data-user-avatar="<%= contact.avatar || 'images/defaultpfp.jpg' %>">
+            <img src="<%= contact.avatar || 'images/defaultpfp.jpg' %>" alt="<%= contact.first_name %> <%= contact.last_name %>" class="rounded-full w-10 h-10 mr-4">
+            <div>
+              <div class="font-semibold"><%= contact.first_name %> <%= contact.last_name %></div>
+              <div class="text-sm text-gray-600">Last message preview</div>
             </div>
-          <% }); %>
-        </div>
+          </div>
+        <% }); %>
+      </div>
+    </aside>
 
-      <!-- Chat Window -->
-      <div class="flex-1 flex flex-col">
-        <div id="chatHeader" class="bg-white shadow-md p-4 flex items-center justify-between">
-          <img id="chatHeaderImg" src="https://st2.depositphotos.com/1054749/6808/i/450/depositphotos_68088587-stock-photo-portrait-of-a-young-african.jpg" alt="Jane Reed" class="rounded-full w-10 h-10 mr-4">
+    <!-- Chat Window -->
+    <main class="flex-1 flex flex-col">
+      
+      <!-- Chat Header -->
+      <header id="chatHeader" class="bg-white shadow-md flex items-center justify-between px-4 md:px-6 lg:px-8 py-3 md:py-4">
+        <div class="flex items-center">
+          <img id="chatHeaderImg" src="https://st2.depositphotos.com/1054749/6808/i/450/depositphotos_68088587-stock-photo-portrait-of-a-young-african.jpg" alt="Jane Reed" class="rounded-full w-10 h-10 md:w-12 md:h-12 lg:w-16 lg:h-16 mr-4">
           <div>
-            <div id="chatHeaderName" class="font-semibold">Jane Reed</div>
+            <div id="chatHeaderName" class="font-semibold text-md md:text-lg lg:text-xl">Jane Reed</div>
             <div id="chatHeaderStatus" class="text-sm text-gray-600">Online</div>
           </div>
-          <div class="bg-gray shadow-lg p-4 flex justify-between items-center">
-            <div class="relative inline-block text-left">
-              <!-- Dropdown Button -->
-              <button id="userListToggle" type="button" class="inline-flex justify-center w-full rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none">
-                Start Chat
-                <!-- Dropdown Icon -->
-                <svg class="-mr-1 ml-2 h-5 w-5" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20" aria-hidden="true">
-                  <path fill-rule="evenodd" d="M5.293 7.707a1 1 0 011.414 0L10 11.414l3.293-3.707a1 1 0 011.414 0 .999.999 0 010 1.414l-4 4a1 1 0 01-1.414 0l-4-4a.999.999 0 010-1.414z" clip-rule="evenodd" />
-                </svg>
-              </button>
-            
-              <!-- Dropdown Menu -->
-              <div id="userList" class="origin-top-right absolute right-0 mt-2 w-56 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5 hidden">
-                <div class="py-1">
-                  <% users.forEach(function(user) { %>
-                    <a href="#" class="user-item block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" data-username="<%= user.username %>">
-                      <%= user.first_name %> <%= user.last_name %>
-                    </a>
-                  <% }); %>
-                </div>
-              </div>
+        </div>
+        <div class="relative inline-block text-left">
+          <!-- Dropdown Button -->
+          <button id="userListToggle" type="button" class="inline-flex justify-center w-full rounded-md border border-gray-300 shadow-sm px-3 py-2 bg-white text-sm md:text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none">
+            Start Chat
+            <!-- Dropdown Icon -->
+            <svg class="-mr-1 ml-2 h-5 w-5" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20" aria-hidden="true">
+              <path fill-rule="evenodd" d="M5.293 7.707a1 1 0 011.414 0L10 11.414l3.293-3.707a1 1 0 011.414 0 .999.999 0 010 1.414l-4 4a1 1 0 01-1.414 0l-4-4a.999.999 0 010-1.414z" clip-rule="evenodd" />
+            </svg>
+          </button>
+        
+          <!-- Dropdown Menu -->
+          <div id="userList" class="origin-top-right absolute right-0 mt-2 w-48 lg:w-56 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5 hidden z-10">
+            <div class="py-1">
+              <% users.forEach(function(user) { %>
+                <a href="#" class="user-item block px-4 py-2 text-sm md:text-base text-gray-700 hover:bg-gray-100" data-username="<%= user.username %>">
+                  <%= user.first_name %> <%= user.last_name %>
+                </a>
+              <% }); %>
             </div>
           </div>
         </div>
+      </header>
 
-        <!-- Chat messages -->
-        <div id="chatBox" class="h-80 p-4 overflow-y-auto bg-gray-50">
-          <!-- Messages will be dynamically inserted here -->
-        </div>
-
-        <!-- Message input -->
-        <div class="bg-white p-4 border-t">
-          <div class="flex">
-            <input id="messageInput" type="text" class="flex-grow border border-gray-300 rounded-lg p-2 mr-4" placeholder="Type a message">
-            <button id="sendMessage" class="bg-maroon text-white px-4 py-2 rounded-lg">Send</button>
-          </div>
-        </div>
+      <!-- Chat Messages -->
+      <div id="chatBox" class="flex-1 p-4 overflow-y-auto bg-gray-50">
+        <!-- Messages will be dynamically inserted here -->
       </div>
-    </div>
+
+      <!-- Message Input -->
+      <footer class="bg-white p-3 md:p-4 border-t">
+        <div class="flex">
+          <input id="messageInput" type="text" class="flex-grow border border-gray-300 rounded-lg p-2 mr-2 focus:outline-none focus:ring-2 focus:ring-maroon text-sm md:text-base" placeholder="Type a message">
+          <button id="sendMessage" class="bg-maroon text-white px-3 py-2 rounded-lg hover:bg-maroon-dark focus:outline-none text-sm md:text-base">
+            Send
+          </button>
+        </div>
+      </footer>
+    </main>
   </div>
+
 
   <!-- Socket.IO Client Script -->
   <script src="/socket.io/socket.io.js"></script>
@@ -115,7 +124,7 @@
       const chatBox = document.getElementById('chatBox');
       const messageInput = document.getElementById('messageInput');
       const sendMessageButton = document.getElementById('sendMessage');
-      const chatSidebar = document.getElementById('chatSidebar');
+      const chatSidebar = document.querySelectorAll('.user-chat');
       const chatHeaderName = document.getElementById('chatHeaderName');
       const chatHeaderImg = document.getElementById('chatHeaderImg');
       const chatHeaderStatus = document.getElementById('chatHeaderStatus');
@@ -129,8 +138,16 @@
       let currentChatUsername = null;
 
       // Toggle the visibility of the user list dropdown
-      userListToggle.addEventListener('click', function() {
+      userListToggle.addEventListener('click', function(event) {
+        event.stopPropagation(); // Prevent event from bubbling up
         userList.classList.toggle('hidden');
+      });
+
+      // Close dropdown when clicking outside
+      document.addEventListener('click', function(event) {
+        if (!userListToggle.contains(event.target) && !userList.contains(event.target)) {
+          userList.classList.add('hidden');
+        }
       });
 
       // Add event listeners to user items in the dropdown
@@ -193,7 +210,7 @@
         chatElement.dataset.userAvatar = 'images/defaultpfp.jpg'; // Replace with actual avatar if available
 
         chatElement.innerHTML = `
-          <img src="default-avatar-url.jpg" alt="${recipientUsername}" class="rounded-full w-10 h-10 mr-4">
+          <img src="images/defaultpfp.jpg" alt="${recipientUsername}" class="rounded-full w-10 h-10 mr-4">
           <div>
             <div class="font-semibold">${recipientUsername}</div>
             <div class="text-sm text-gray-600">New chat</div>
@@ -204,7 +221,9 @@
           switchChat(chatId, recipientUsername, 'images/defaultpfp.jpg'); // Replace with actual avatar if available
         });
 
-        chatSidebar.appendChild(chatElement);
+        chatSidebar.forEach(sidebar => {
+          sidebar.parentNode.appendChild(chatElement);
+        });
       }
 
       async function switchChat(chatId, userName, userAvatar) {
@@ -311,7 +330,7 @@
         } else {
           messageElement.classList.add('justify-start');
           messageElement.innerHTML = `
-            <img src="${chatHeaderImg.src == '' ? 'images/defaultpfp.jpg' : chatHeaderImg.src}" alt="${msg.from}" class="rounded-full w-8 h-8 mr-4">
+            <img src="${chatHeaderImg.src || 'images/defaultpfp.jpg'}" alt="${msg.from}" class="rounded-full w-8 h-8 mr-4">
             <div class="bg-white p-3 rounded-lg shadow-sm max-w-xs">
               <p>${msg.message}</p>
             </div>
