--- a/website2/views/search.ejs
+++ b/website2/views/search.ejs
@@ -95,16 +95,17 @@
             const resultsDiv = document.getElementById('searchResults');
             resultsDiv.innerHTML = '';
             const results = data.results;
-    
+            
+            console.log(results)
             if (results && results.length > 0) {
               results.forEach(user => {
                 // Create card element
+                const imageUrl = user.uploadedFile ? `/uploads/${user.uploadedFile}` : 'default_image_url';
                 const card = document.createElement('div');
                 card.className = "max-w-sm w-full lg:max-w-full lg:flex shadow-gray-600 shadow-lg m-4";
-    
                 card.innerHTML = `
                   <div class="lg:h-auto lg:w-48 flex-none border-gray-400 lg:border-l lg:border-t lg:border-b lg:border-r lg:border-gray-400 bg-white text-center">
-                    <img src="${user.uploadedFile || 'default_image_url'}" class="h-full object-cover object-center shadow-lg rounded-l lg:rounded-t" alt="${user.first_name} ${user.last_name}" />
+                    <img src="${imageUrl}" class="h-full object-cover object-center shadow-lg rounded-l lg:rounded-t" alt="${user.first_name} ${user.last_name}" />
                   </div>
                   <div class="flex flex-row h-80 border-r border-b border-l border-gray-400 lg:border-l-0 lg:border-t lg:border-gray-400 bg-white rounded-r-lg p-4 justify-between leading-normal w-full">
                     <div class="h-full pl-4 pr-24 flex flex-col justify-between leading-normal">
