added like button 2 search

--- a/website2/views/search.ejs
+++ b/website2/views/search.ejs
@@ -163,7 +163,7 @@
                       </div>
                     </div>
                     <div class="flex items-center justify-center">
-                      <img src="like_icon_url" class="object-contain h-24 mx-4 cursor-pointer" alt="Like" />
+                      <img src="https://cdn.discordapp.com/attachments/1280355262976360490/1290027947482288191/Check_mark.png?ex=66faf7a6&is=66f9a626&hm=d7d8ee8476aa37a3ceb9623064375c4dab6cb5106977930bb76e49e024a7e419&" class="object-contain h-24 mx-4 cursor-pointer" alt="Like" />
                     </div>
                   </div>
                 `;
