--- a/website2/views/home.ejs
+++ b/website2/views/home.ejs
@@ -6,19 +6,16 @@
         <!--Navbar-->
         <div class="navbar fixed h-24 w-full top-0 flex flex-row justify-between items-center mb-24 bg-gradient-to-r from-maroon to-maroon-dark shadow-gray-600 shadow-xl">
           <!--settings icon--> 
-          <a href="/settings" class="object-contain h-full"></a>
           <img
             src="https://cdn.discordapp.com/attachments/1280355262976360490/1289829540318679102/setting.png?ex=66fa3ede&is=66f8ed5e&hm=a0431fc8d07f50a621d14c1732b0d3ef68f5d1553408c150ffb660fd6fa814f7&"
             class="object-contain object-left flex ml-8 mr-20 h-12"
           />
 
           <!--logo-->
-          <a href="/home" class="object-contain h-full">
           <img 
             src="https://cdn.discordapp.com/attachments/1286925382632865804/1290021310797189271/Dormie_app_Gray.png?ex=66faf177&is=66f99ff7&hm=08162744a28d74d86402a2a69e227a5c38003eb9ad7a1f7f0834b4fb6b8c16aa&"
             class="object-contain h-full"
           />
-          </a>
 
           <!--text and search icon-->
           <div class="flex flex-row">
@@ -51,7 +48,7 @@
                 <div class="max-w-sm w-full lg:max-w-full lg:flex shadow-gray-600 shadow-lg">
                     <div class="lg:h-auto lg:w-48 flex-none border-gray-400 lg:border-l lg:border-t lg:border-b lg:border-r lg:border-gray-400 bg-white text-center ">
                       <img
-                          src="<%= user.uploadedFile ? '/uploads/' + user.uploadedFile : 'https://st2.depositphotos.com/1054749/6808/i/450/depositphotos_68088587-stock-photo-portrait-of-a-young-african.jpg' %>"
+                          src="<%= user.uploadedFile ? '/uploads/' + user.uploadedFile : '/images/defaultpfp.jpg' %>"
                           class="h-full object-none object-center shaowd-lg rounded-l lg:rounded-l lg:rounded-t"
                       />
                     </div>
