--- a/website2/views/signIn.ejs
+++ b/website2/views/signIn.ejs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-  <html class="h-full bg-back-sign">
+  <html class="h-full bg-white">
     <body class="h-full">
     <link href="/stylesheets/main.css" rel="stylesheet">
       <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
         <div class="sm:mx-auto sm:w-full sm:max-w-sm">
           <img
             alt="Your Company"
-            src="https://cdn.discordapp.com/attachments/1286925382632865804/1289653297443115088/Domrime_Logo.png?ex=66f99aba&is=66f8493a&hm=df225ad18675b9bf6d0ec5de2451f309e9db17658ba77f77fb735dbf6cee43fe&"
+            src="https://media.discordapp.net/attachments/1286925382632865804/1290021311120277565/Dormie_app.png?ex=66fc42f8&is=66faf178&hm=38810c25c66f306e4772df08864e2be7e276a784010d79cc63b6eef1d09921e6&=&format=webp&quality=lossless&width=1057&height=309"
             className="object-fill mx-auto h-10 w-auto"
           />
         </div>
